# rag-movie-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/rag_movie_agent/: crew.py  main.py
src/rag_movie_agent/config/: agents.yaml  tasks.yaml
src/rag_movie_agent/tools/: chromadb_vector_search_tool.py
src/rag_movie_agent/utils/: preprocessing.py
