[project]
name = "rag_movie_agent"
version = "0.1.0"
description = "rag-movie-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
rag_movie_agent = "rag_movie_agent.main:run"
run_crew = "rag_movie_agent.main:run"
train = "rag_movie_agent.main:train"
replay = "rag_movie_agent.main:replay"
test = "rag_movie_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
